@@ -921,6 +921,7 @@ OpenXML_GLOBAL=Globales
 OpenXML_TRANSLATE_CHARTS=Graphi&ques
 OpenXML_TRANSLATE_DIAGRAMS=Dia&grammes
 OpenXML_TRANSLATE_DRAWINGS=De&ssins
+OpenXML_TRANSLATE_WORDART=&WordArt
 OpenXML_GENERIC_OPTIONS=Autres options :
 OpenXML_AGGREGATE_TAGS=Agr\u00e9ger les &balises
 OpenXML_PRESERVE_SPACES=Pr\u00e9se&rver les espaces pour toutes les balises
