@@ -25,7 +25,7 @@ reload the project.
 ----------------------------------------------------------------------
  OmegaT 2.3.0
  ----------------------------------------------------------------------
-   6 Enhancements
+   7 Enhancements
    3 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -38,6 +38,9 @@ reload the project.
 
   - TransTips to consider letter case
   http://sourceforge.net/support/tracker.php?aid=3027339
+
+  - Ability to translate WordArt in MS Office files
+  http://sourceforge.net/support/tracker.php?aid=3311077
 
   Other enhancements:
 
